Added below changes : 1. Spring security with basic username and password 2. validation of model fields 3. Exception handling and Error response with correct status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8000
 spring.data.mongodb.host=mongoDB
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=RetailStore
+
+#Security properties
+spring.security.user.name=user
+spring.security.user.password=pass123
